--- a/cube_demo_system/templates/base.html
+++ b/cube_demo_system/templates/base.html
@@ -11,10 +11,7 @@
     <title>Album example for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="{% static "bootstrap-4.2.1-dist/css/bootstrap.min.css" %}" rel="stylesheet">
-
-    <!-- Font Awesome -->
-    <link href="{% static "fontawesome/css/all.css" %}" rel="stylesheet">
+    <link href="{% static "bootstrap-3.4.0-dist/css/bootstrap.min.css" %}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="{% static "css/album.css" %}" rel="stylesheet">
@@ -24,7 +21,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="{% static "js/jquery-3.3.1.min.js" %}"></script>
     <script src="{% static "js/popper.min.js" %}"></script>
-    <script src="{% static "bootstrap-4.2.1-dist/js/bootstrap.min.js" %}"></script>
+    <script src="{% static "bootstrap-3.4.0-dist/js/bootstrap.min.js" %}"></script>
     <script src="{% static "js/holder.min.js" %}"></script>
     {% block extra_head %} {% endblock %}
   </head>
@@ -49,35 +46,53 @@
           </div>
         </div>
       </div>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Cube Demo System</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+      <!--<nav class="navbar navbar-default">-->
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">Cube Demo</a>
+          </div>
 
-        <div class="collapse navbar-collapse" id="navbarsExample05">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <!--<li class="nav-item">-->
-              <!--<a class="nav-link" href="#">Link</a>-->
-            <!--</li>-->
-            <!--<li class="nav-item">-->
-              <!--<a class="nav-link disabled" href="#">Disabled</a>-->
-            <!--</li>-->
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="dropdown05" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Cube</a>
-              <div class="dropdown-menu" aria-labelledby="dropdown05">
-                <a class="dropdown-item" href="/cube/upload">Upload</a>
-                <a class="dropdown-item" href="#">Query</a>
-              </div>
-            </li>
-          </ul>
-          <form class="form-inline my-2 my-md-0">
-            <input class="form-control" type="text" placeholder="Search">
-          </form>
-        </div>
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="/">Home<span class="sr-only">(current)</span></a></li>
+              <li><a href="#">Link</a></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Cube<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="/cube/upload">Upload</a></li>
+                  <li><a href="/cube/query">Query</a></li>
+                  <!--<li><a href="#">Something else here</a></li>-->
+                  <!--<li role="separator" class="divider"></li>-->
+                  <!--<li><a href="#">Separated link</a></li>-->
+                  <!--<li role="separator" class="divider"></li>-->
+                  <!--<li><a href="#">One more separated link</a></li>-->
+                </ul>
+              </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="#">Link</a></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Action</a></li>
+                  <li><a href="#">Another action</a></li>
+                  <li><a href="#">Something else here</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="#">Separated link</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
       </nav>
     </header>
 
