--- a/cube_demo_system/templates/map_visualization.html
+++ b/cube_demo_system/templates/map_visualization.html
@@ -6,33 +6,53 @@ switchShowAll{% extends "base.html" %}
 	FILL_COLORS=["0", "58", "118", "238"]
   function getFilledColor(fillColor, percentage){
     console.log(percentage)
-    return "hsl("+fillColor+", "+Math.min(100, (percentage*100).toFixed(2)+30)+"%, 80%)"
+    return "hsl("+fillColor+", "+Math.min(100, (percentage*100).toFixed(2))+"%, 60%)"
   }
 	function updateMap(val, svg, range){
 		var topicIndex = parseInt(document.querySelector('input[name="topic_filter"]:checked').value);
 		var fillColor = FILL_COLORS[topicIndex];
 		var dict = new Set();
+    var cellWeight = new Map();
+    // var min = 100;
+    // var max = 0;
 		var i;
-          {% for i in data %}
-          		if( {{ i.time }} < val+range && {{ i.time }} >= val && "{{i.location}}".length && (topicIndex == 3 || {{ i.topics }}[topicIndex] > 0.3 ) ){
-                {% for location in i.location %}
-                  dict.add("{{location}}");
-                  if (topicIndex == 3 )
-                      svg.getElementById("{{location}}").setAttribute("fill", "hsl(238, 100%, 80%)");
-                  else
-      	  				     svg.getElementById("{{location}}").setAttribute("fill", getFilledColor(fillColor, {{ i.topics }}[topicIndex]));
-                {% endfor %}
-              } else{
-                // change the color back to default color
-                {% for location in i.location %}
-            			if (!dict.has("{{location}}") && "{{location}}" != "None"){
-            				svg.getElementById("{{location}}").setAttribute("fill", "#CCCCCC");
-            			}
-                {% endfor %}
-          		}
+    {% for i in data %}
+    		if( {{ i.time }} < val+range && {{ i.time }} >= val && "{{i.location}}".length && (topicIndex == 3 || {{ i.topics }}[topicIndex] > 0.3 ) ){
 
+          {% for location in i.location %}
+            dict.add("{{location}}");
+
+            if( !cellWeight.has("{{location}}")) {
+              cellWeight.set("{{location}}", 0)
+            }
+
+            if (topicIndex == 3 )
+                svg.getElementById("{{location}}").setAttribute("fill", "hsl(238, 100%, 80%)");
+            else {
+              //svg.getElementById("{{location}}").setAttribute("fill", getFilledColor(fillColor, {{ i.topics }}[topicIndex]));
+              cellWeight.set("{{location}}", cellWeight.get("{{location}}") + {{ i.topics }}[topicIndex])
+              // if(cellWeight.get("{{ location }}") > max) max = cellWeight.get("{{location}}")
+              // if (cellWeight.get("{{ location }}") < min ) min = cellWeight.get("{{ location }}")
+            }
           {% endfor %}
-    }
+
+        } else{
+          // change the color back to default color
+          {% for location in i.location %}
+      			if (!dict.has("{{location}}") && "{{location}}" != "None"){
+      				svg.getElementById("{{location}}").setAttribute("fill", "#CCCCCC");
+      			}
+          {% endfor %}
+
+    		}
+    {% endfor %}
+    // var range = max - min;
+    if(topicIndex!=3){
+        cellWeight.forEach(function(value, location, map){
+          svg.getElementById(location).setAttribute("fill", getFilledColor(fillColor, value));
+        })
+      }
+  }
     function updateDate(originDate, id, val){
     	var minDate = new Date(originDate.toDateString())
     	minDate.setDate(minDate.getDate() + val);
