--- a/cube_demo_system/static/css/map_visualization.css
+++ b/cube_demo_system/static/css/map_visualization.css
@@ -1,8 +1,8 @@
 .slider {
   -webkit-appearance: none;
-  width: 25%;
+  max-width: 500px;
   height: 15px;
-  border-radius: 5px;   
+  border-radius: 5px;
   background: #d3d3d3;
   outline: none;
   opacity: 0.7;
@@ -19,7 +19,7 @@
   appearance: none;
   width: 25px;
   height: 25px;
-  border-radius: 50%; 
+  border-radius: 50%;
   background: #4CAF50;
   cursor: pointer;
 }
@@ -48,7 +48,7 @@ label {
 	display: inline-block;
 	width: 25%;
 	margin-right:3%;
-}	
+}
 
 #map_current{
 	width: 175%;
