--- a/cube_demo_system/static/css/map_visualization.css
+++ b/cube_demo_system/static/css/map_visualization.css
@@ -1,6 +1,11 @@
+#map_visualization_container{
+  padding: 0 3%;
+}
+
 .slider {
   -webkit-appearance: none;
-  max-width: 500px;
+  width: 25% !important;
+  display: inline-block !important;
   height: 15px;
   border-radius: 5px;
   background: #d3d3d3;
@@ -68,4 +73,9 @@ label {
 }
 #selectedDate_prev{
 	min-width:20%;
+}
+
+.topic_filter_container{
+  display: inline-block;
+  margin-right: 2%;
 }
