--- a/cube_demo_system/templates/map_visualization.html
+++ b/cube_demo_system/templates/map_visualization.html
@@ -10,7 +10,7 @@
 		</script>
 {% endblock %}
 {% block content %}
-    <div>
+  <div id="map_visualization_container">
      <div class="map_container">
      	<object id="map_prev" class="my_map" data="/static/img/cal_map.svg" type="image/svg+xml"></object>
 
@@ -21,30 +21,30 @@
      <div class="map_container" id="map_container_next">
      	<object id="map_next" class="my_map" data="/static/img/cal_map.svg" type="image/svg+xml"></object>
      </div>
-    </div>
-    <div>
+  <div>
     	<div class='selectedDated_div' id='selectedDate_prev'></div>
     	<div class='selectedDated_div' id='selectedDate_current'></div>
      	<div class='selectedDated_div' id='selectedDate_next'></div>
-    </div>
+  </div>
 	<input type="range" id="timeline_slider" list="tickmarks" step="3" min="0" max={{ dateRange }} oninput="updateTimeInput(3, {{ data|safe }}, {{dateRange}}, '{{minDate}}');" class="slider" value="0"/>
 	<input type="checkbox" id="show_all_checkbox" onchange="switchShowAll({{ data|safe }}, {{dateRange}}, '{{minDate}}')" checked>
 	<label id="show_all_news_label"> Show All News </label>
 	<p>Topic Filter:</p>
-	<div>
+	<div class="topic_filter_container">
 	  <input type="radio" id="death" name="topic_filter" value="0" onchange="switchShowAll({{ data|safe }}, {{dateRange}}, '{{minDate}}');"/>
 	  <label for="death">Death</label>
 	</div>
-	<div>
+	<div class="topic_filter_container">
 	  <input type="radio" id="property_loss" name="topic_filter" value="1" onchange="switchShowAll( {{ data|safe }}, {{dateRange}}, '{{minDate}}');"/>
 	  <label for="property_loss">Propoerty Loss</label>
 	</div>
-	<div>
+	<div class="topic_filter_container">
 	  <input type="radio" id="reconstruction" name="topic_filter" value="2" onchange="switchShowAll({{ data|safe }}, {{dateRange}}, '{{minDate}}');"/>
 	  <label for="reconstruction">Reconstruction</label>
 	</div>
-	<div>
+	<div class="topic_filter_container">
 	  <input type="radio" id="all_topic" name="topic_filter" value="3" checked onchange="switchShowAll( {{ data|safe }}, {{dateRange}}, '{{minDate}}');"/>
 	  <label for="all_topic">Select All Topics</label>
 	</div>
+ </div>
 {% endblock %}
