--- a/cube_demo_system/templates/base.html
+++ b/cube_demo_system/templates/base.html
@@ -64,7 +64,12 @@
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
               <li class="active"><a href="/">Home<span class="sr-only">(current)</span></a></li>
-              <li><a href="#">Link</a></li>
+              <li class="dropdown">
+		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button aria-haspopup="true aria-expanded="false">Visualization<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="/visualization/map">Map</a></li>
+                </ul>
+	      </li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Cube<span class="caret"></span></a>
                 <ul class="dropdown-menu">
