--- a/cube_demo_system/templates/base.html
+++ b/cube_demo_system/templates/base.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <!--<link rel="icon" href="../../../../favicon.ico">-->
 
-    <title>Album example for Bootstrap</title>
+    <title>Event Cube Demo</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{% static "bootstrap-3.4.0-dist/css/bootstrap.min.css" %}" rel="stylesheet">
