--- a/cube_demo_system/templates/base.html
+++ b/cube_demo_system/templates/base.html
@@ -67,7 +67,8 @@
               <li class="dropdown">
 		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button aria-haspopup="true aria-expanded="false">Visualization<span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="/visualization/map">Map</a></li>
+                  <li><a href="/visualization/county">County</a></li>
+                  <li><a href="/visualization/city">City</a></li>
                 </ul>
 	      </li>
               <li class="dropdown">
