--- a/cube_demo_system/templates/visualization/county.html
+++ b/cube_demo_system/templates/visualization/county.html
@@ -1,35 +1,35 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 {% block extra_head %}
-<link href="{% static "css/map_visualization.css" %}" rel="stylesheet">
-    <script src="{% static "js/map_visualization.js" %}"></script>
-		<script type="text/javascript">
-			window.onload = function(){
-				updateTimeInput({{ dateRange }}, {{ data|safe }}, {{dateRange}}, "{{minDate}}");
+<link href="{% static "css/visualization/county.css" %}" rel="stylesheet">
+<script src="{% static "js/visualization/county.js" %}"></script>
+<script type="text/javascript">
+	window.onload = function(){
+		updateTimeInput({{ dateRange }}, {{ data|safe }}, {{dateRange}}, "{{minDate}}");
 
-				var svg = document.getElementById("map_current").contentDocument
-				var paths = svg.getElementsByTagName("path");
-				var polylines = svg.getElementsByTagName("polyline");
+		var svg = document.getElementById("map_current").contentDocument
+		var paths = svg.getElementsByTagName("path");
+		var polylines = svg.getElementsByTagName("polyline");
 
-				for (var i = 0; i < paths.length; i++) {
-    				    paths[i].addEventListener('click', showModal, false);
-				}
+		for (var i = 0; i < paths.length; i++) {
+		    paths[i].addEventListener('click', showModal, false);
+		}
 
-				for (var i = 0; i < polylines.length; i++) {
-    				    polylines[i].addEventListener('click', showModal, false);
-				}
+		for (var i = 0; i < polylines.length; i++) {
+		    polylines[i].addEventListener('click', showModal, false);
+		}
 
-				var scrolling = setInterval(changeTopic, 2000);
+		var scrolling = setInterval(changeTopic, 2000);
 
-				function changeTopic() {
-  				    var topicIndex = parseInt(document.querySelector('input[name="topic_filter"]:checked').value);
-				    var newTopicIndex = (topicIndex + 1) % 4;
+		function changeTopic() {
+		    var topicIndex = parseInt(document.querySelector('input[name="topic_filter"]:checked').value);
+		    var newTopicIndex = (topicIndex + 1) % 4;
 
-				    document.getElementsByName("topic_filter")[newTopicIndex].checked = true
-				    document.getElementsByName("topic_filter")[newTopicIndex].onchange()
-				}
-			}
-		</script>
+		    document.getElementsByName("topic_filter")[newTopicIndex].checked = true
+		    document.getElementsByName("topic_filter")[newTopicIndex].onchange()
+		}
+	}
+</script>
 {% endblock %}
 
 {% block content %}
