--- a/cube_demo_system/templates/visualization/city.html
+++ b/cube_demo_system/templates/visualization/city.html
@@ -39,6 +39,9 @@
 
 {% block content %}
   <div class="container">
+    <p>{{ topic }}</p>
+    <p>{{ county }}</p>
+    <p>{{ date_period }}</p>
     <div id="id-city-map"></div>
 
     <div id="city_modal" class="modal" tabindex="-1" role="dialog">
