--- a/cube_demo_system/templates/visualization/county.html
+++ b/cube_demo_system/templates/visualization/county.html
@@ -123,7 +123,7 @@
 	              </div>
             </div>
             <div class="modal-footer">
-              <button type="button" onclick="drillDownCity">Drill Down</button>
+              <button type="button" onclick="drillDownCity()">Drill Down</button>
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
           </div>
