--- a/cube_demo_system/static/css/visualization/city.css
+++ b/cube_demo_system/static/css/visualization/city.css
@@ -12,3 +12,20 @@
     margin: 0 0 5px;
     color: #777;
 }
+
+ul{
+  list-style-type: none;
+  display: flex;
+  padding: 0;
+}
+
+.key-phrase-li{
+  margin:auto;
+  text-align: center;
+  font-size: 2.5ex;
+}
+
+div.form-group{
+  width: 70%;
+  margin-left:2%;
+}
