--- a/cube_demo_system/templates/visualization/city.html
+++ b/cube_demo_system/templates/visualization/city.html
@@ -10,6 +10,7 @@
   var county = "{{ county }}"
   var time = "{{ date_period }}"
   var images = {{ image|safe }}
+  var keyPhrases = {{ summary|safe }}
 
   $(document).ready(function(){
     L.geoJson({{ butte|safe }}, {style: {
@@ -61,7 +62,7 @@
                       <ul class="form-group" id="key-phrases-list"></ul>
                     </div>
       	                </div>
-                  <div>
+                  <div id="model_img_container">
                     <img id="fire_image" src="{% static "images/wildfire_example.jpg" %}" class="rounded float-right" width="450">
                   </div>
                     </div>
